--- a/src/views/app/index.css
+++ b/src/views/app/index.css
@@ -30,7 +30,20 @@ main > * {
   padding: 1rem;
 }
 
+.top-btn-container > * {
+  margin-left: 1rem;
+}
+
 .block-heading-container {
   display: flex;
   align-items: center;
+}
+
+.block-heading-container > * {
+  margin-right: 1rem;
+}
+
+.add-new-block-container > * {
+  margin-right: 1rem;
+  margin-bottom: 1rem;
 }
